# Wave_local

./: README.md
combined/: CMakeLists.txt  compile_commands.json  draft.hpp  main.cpp  main.hpp
combined/source/: discretization.h  heat_solutions.hpp  l2_error.h  mass_matrix.h  poisson_solutions.hpp  solver.h  stiffness_matrix.h  wave_solutions.hpp
step-100/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
step-101/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  step-101.cc
step-99/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  step-99.vtu
